[package]
name = "solana-escrow"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false
description = "A secure escrow program for atomic SOL exchanges on Solana"
repository = "https://github.com/weiwu5/solana-escrew"
keywords = ["solana", "escrow", "blockchain", "smart-contract"]

[dependencies]
solana-program = "=1.9.4"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.4"
solana-sdk = "=1.9.4"
solana-validator = "=1.9.4"
solana-logger = "=1.9.4"

[lib]
crate-type = ["cdylib", "lib"]
